# wirtualny-ekosystem

./: .gitignore  CMakeLists.txt  Kwadrat.cpp  Kwadrat.h  Mieszkaniec.cpp  Mieszkaniec.h  Obliczenia.cpp  Obliczenia.h  Prostokat.cpp  Prostokat.h  Sasiedztwo.cpp  Sasiedztwo.h  UrzadzenieElektryczne.cpp  UrzadzenieElektryczne.h  generatorLosowy.cpp  generatorLosowy.h  main.cpp  organizm.cpp  organizm.h  ustawienia.h
